core/css/apps.scss
/**
 * @copyright Copyright (c) 2016-2017, John Molakvoæ <skjnldsv@protonmail.com>
 * @copyright Copyright (c) 2016, Julius Haertl <jus@bitgrid.net>
 * @copyright Copyright (c) 2016, Morris Jobke <hey@morrisjobke.de>
 * @copyright Copyright (c) 2016, pgys <info@pexlab.space>
 * @copyright Copyright (c) 2016, Lukas Reschke <lukas@statuscode.ch>
 * @copyright Copyright (c) 2016, Stefan Weil <sw@weilnetz.de>
 * @copyright Copyright (c) 2016, Roeland Jago Douma <rullzer@owncloud.com>
 * @copyright Copyright (c) 2016, jowi <sjw@gmx.ch>
 * @copyright Copyright (c) 2015, Hendrik Leppelsack <hendrik@leppelsack.de>
 * @copyright Copyright (c) 2015, Thomas Müller <thomas.mueller@tmit.eu>
 * @copyright Copyright (c) 2015, Vincent Petry <pvince81@owncloud.com>
 * @copyright Copyright (c) 2014-2017, Jan-Christoph Borchardt <hey@jancborchardt.net>
 *
 * @license GNU AGPL version 3 or any later version
 *
 */

/* BASE STYLING ------------------------------------------------------------ */
// no h1 allowed since h1 = logo
h2 {
	font-weight: bold;
	font-size: 20px;
	margin-bottom: 12px;
	line-height: 30px;
	color: var(--color-text-light);
}

h3 {
	font-size: 16px;
	margin: 12px 0;
	color: var(--color-text-light);
}

h4 {
	font-size: 14px;
}

/* do not use italic typeface style, instead lighter color */
em {
	font-style: normal;
	color: var(--color-text-lighter);
}

dl {
	padding: 12px 0;
}

dt,
dd {
	display: inline-block;
	padding: 12px;
	padding-left: 0;
}

dt {
	width: 130px;
	white-space: nowrap;
	text-align: right;
}

kbd {
	padding: 4px 10px;
	border: 1px solid #ccc;
	box-shadow: 0 1px 0 rgba(0, 0, 0, .2);
	border-radius: var(--border-radius);
	display: inline-block;
	white-space: nowrap;
}


/* APP STYLING ------------------------------------------------------------ */

#content[class*='app-'] * {
	box-sizing: border-box;
}
/* ... */

